--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,6 +4,9 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-	    <H1>Number: {{ number }}</H1>
+	    {% if number % 2 == 0 %}
+	    <H1>Number: {{ number }} is even</H1>
+	    {% else %}
+	    <H1>Number: {{ number }} is odd</H1>
     </BODY>
 </HTML>
