--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -3,7 +3,7 @@
     <HEAD>
         <TITLE>HBNB</TITLE>
     </HEAD>
-    <BODY>if{% if n % 2 == 0 %}
+    <BODY>{% if n % 2 == 0 %}
 	    <H1>Number: {{ n }} is even</H1>
 	    {% else %}
 	    <H1>Number: {{ n }} is odd</H1>{% endif %}
